--- a/src/main/resources/templates/bookboard/list.html
+++ b/src/main/resources/templates/bookboard/list.html
@@ -53,7 +53,7 @@
         /* 도서 표지 스타일 */
         .book-image {
             width: 100%;
-            height: 250px;
+            height: 70%;
             object-fit: cover;
             border-bottom: 1px solid #ddd;
             border-radius: 10px 10px 0 0;
@@ -82,15 +82,15 @@
 </head>
 <body>
 <main class="container" layout:fragment="main">
-    <div>
-        <!-- 🔍 검색 폼 -->
-        <form th:action="@{/bookboard/search}" method="post">
-            <select class="form-select form-select-lg mb-3" aria-label="검색 유형" name="type">
+    <!-- 저자, 책 이름으로 검색하기 -->
+    <div class="d-flex justify-content-center mt-5">
+        <form th:action="@{/bookboard/search}" method="post" class="d-flex align-items-center gap-2">
+            <select class="form-select w-auto" aria-label="검색 유형 선택" name="type">
                 <option value="author">저자</option>
                 <option value="bookName">책 이름</option>
             </select>
-            <input type="text" id="word" name="word" class="form-control" placeholder="검색어 입력">
-            <button type="submit" class="btn btn-primary mt-3">검색</button>
+            <input type="text" id="word" name="word" class="form-control w-50" style="flex-grow: 2;" placeholder="검색어 입력">
+            <button type="submit" class="btn btn-primary">검색</button>
         </form>
     </div>
 
