--- a/src/main/resources/templates/bookboard/detail.html
+++ b/src/main/resources/templates/bookboard/detail.html
@@ -9,7 +9,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5PlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <style>
-        #buyBtn, #rentalBtn {
+        #buyEBookBtn, #rentalBtn, #buyPaperBookBtn{ {
             display: none;
         }
         .row {
@@ -78,9 +78,9 @@
 
                 <h5>판매 상태</h5>
                 <p>
-                    <span th:if="${bookDto.sellsOptions.contains(T(com.cstangga.ebookland.bookboard.entity.SellsOptions).RENTAL_EBOOK)}">대여</span>
-                    <span th:if="${bookDto.sellsOptions.contains(T(com.cstangga.ebookland.bookboard.entity.SellsOptions).EBOOK)}">전자 구매</span>
-                    <span th:if="${bookDto.sellsOptions.contains(T(com.cstangga.ebookland.bookboard.entity.SellsOptions).PAPER_BOOK)}">실물 구매</span>
+                    <span th:if="${bookDto.sellsOptions.contains(T(com.cstangga.ebookland.bookboard.entity.SellsOptions).RENTAL_EBOOK)}">전자책 대여, </span>
+                    <span th:if="${bookDto.sellsOptions.contains(T(com.cstangga.ebookland.bookboard.entity.SellsOptions).EBOOK)}">전자책 구매, </span>
+                    <span th:if="${bookDto.sellsOptions.contains(T(com.cstangga.ebookland.bookboard.entity.SellsOptions).PAPER_BOOK)}">종이책 구매</span>
                 </p>
 
                 <h5>가격</h5>
@@ -102,17 +102,17 @@
                 <div class="form-container mt-3">
                     <h5>구매 방식 선택</h5>
                     <div>
-                        <div class="form-check">
+                        <div class="form-check" th:if="${bookDto.sellsOptions.contains(T(com.cstangga.ebookland.bookboard.entity.SellsOptions).RENTAL_EBOOK)}">
                             <input class="form-check-input" type="radio" name="buyType" id="rentalEbookToggle" value="rentalEbook"
                                    onclick="toggleInput('rentalEbookToggle')">
                             <label class="form-check-label" for="rentalEbookToggle">전자책 대여</label>
                         </div>
-                        <div class="form-check">
+                        <div class="form-check" th:if="${bookDto.sellsOptions.contains(T(com.cstangga.ebookland.bookboard.entity.SellsOptions).EBOOK)}">
                             <input class="form-check-input" type="radio" name="buyType" id="ebookToggle" value="ebook"
                                    onclick="toggleInput('ebookToggle')">
                             <label class="form-check-label" for="ebookToggle">전자책 구매</label>
                         </div>
-                        <div class="form-check">
+                        <div class="form-check" th:if="${bookDto.sellsOptions.contains(T(com.cstangga.ebookland.bookboard.entity.SellsOptions).PAPER_BOOK)}">
                             <input class="form-check-input" type="radio" name="buyType" id="paperBookToggle" value="paperBook"
                                    onclick="toggleInput('paperBookToggle')">
                             <label class="form-check-label" for="paperBookToggle">종이책 구매</label>
