OneToMany -> fetch join, N+1 문제 해결

--- a/src/main/resources/templates/member/readbook.html
+++ b/src/main/resources/templates/member/readbook.html
@@ -1,16 +1,13 @@
 <!doctype html>
-<html xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
-      layout:decorate="~{layout/default}">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>회원정보</title>
+    <title>Document</title>
 </head>
 <body>
-<main layout:fragment="main" class="container">
-    <h1>회원 정보</h1>
-</main>
+<h1>왼쪽에는 책 그림+책 이름 오른쪽에는 전체 내용</h1>
 </body>
 </html>
