--- a/src/main/resources/templates/bookboard/detail.html
+++ b/src/main/resources/templates/bookboard/detail.html
@@ -9,7 +9,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5PlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <style>
-        #buyEBookBtn, #rentalBtn, #buyPaperBookBtn{ {
+        #buyEBookBtn, #rentalBtn, #buyPaperBookBtn{
             display: none;
         }
         .row {
@@ -180,24 +180,29 @@
         function calculateTotal() {
             const inputField = document.getElementById('inputField');
             const totalPrice = document.getElementById('totalPrice');
-            const rental_toggle = document.getElementById('rentalEbookToggle').checked;
-            const paperBook_toggle = document.getElementById('paperBookToggle').checked;
+            const rentalToggle = document.getElementById('rentalEbookToggle');
+            const paperBookToggle = document.getElementById('paperBookToggle');
 
+            // 체크된 상태 확인
+            const isRental = rentalToggle && rentalToggle.checked;
+            const isPaperBook = paperBookToggle && paperBookToggle.checked;
 
-            const rentalPrice = parseInt(/*[[${bookDto.rentalPrice}]]*/);
-            const purchasePrice = parseInt(/*[[${bookDto.purchasePrice}]]*/);
+            // 대여 가격 & 구매 가격 가져오기
+            const rentalPrice = parseInt(/*[[${bookDto.rentalPrice}]]*/) || 0;
+            const purchasePrice = parseInt(/*[[${bookDto.purchasePrice}]]*/) || 0;
 
-            console.log("대여 값 : "+ rentalPrice+" 구매 값 : "+purchasePrice);
-            console.log("inputField: " + inputField.value);
+            console.log("대여 값:", rentalPrice, "구매 값:", purchasePrice);
 
-            const inputValue = parseInt(inputField.value || 0);
+            // 입력 값이 숫자인지 확인
+            const inputValue = parseInt(inputField.value) || 0;
+            console.log("입력된 값:", inputValue);
 
-            if (rental_toggle) {
-                totalPrice.innerText = (rentalPrice * inputValue).toLocaleString();
-            } else if (paperBook_toggle) {
-                totalPrice.innerText = (purchasePrice * inputValue).toLocaleString();
+            if (isRental) {
+                totalPrice.innerText = (rentalPrice * inputValue).toLocaleString() + " 원";
+            } else if (isPaperBook) {
+                totalPrice.innerText = (purchasePrice * inputValue).toLocaleString() + " 원";
             } else {
-                totalPrice.innerText = purchasePrice.toLocaleString();
+                totalPrice.innerText = purchasePrice.toLocaleString() + " 원";
             }
         }
     </script>
